# deepslate-benchmarks

./: .gitignore  README.md  pyproject.toml  realtime.proto  realtime_pb2.py
s2s/big-bench-audio/: README.md  evaluate.py  run_benchmark.py
