[project]
name = "deepslate-benchmarks"
version = "0.1.0"
description = "Deesplate benchmark repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic[vertex]",
  "datasets<3",
  "jiwer",
  "librosa",
  "numpy",
  "openai",
  "protobuf",
  "soundfile",
  "tqdm",
  "websockets",
]
[project.optional-dependencies]
dev = [
  "grpcio-tools",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["s2t"]
